Externalize CORS allowed origins and set production API URL
Deploying backend to Railway + frontend to Vercel; CORS origins now
come from an env var (defaults to localhost for local dev) instead of
being hardcoded, and the frontend build points at the Railway backend.